# CGSW

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE.md  LIMITATIONS.md  README.md
benchmarks/: 1_GSW.cpp  2_CGSW.cpp  CMakeLists.txt  README.md
cmake/: FindGMP.cmake  FindNTL.cmake  get_gmp_version.c
documentation/pir/: PIR.md
examples/: 1_gsw_basics.cpp  2_cgsw_basic.cpp  CMakeLists.txt  README.md  examples.cpp  examples.h  examples.hpp  reportexample.cpp
include/cgsw/: cgsw.h  cgsw.hpp  ciphertext.h  ciphertext.hpp  common.h  common.hpp  decrypter.h  decrypter.hpp  decryptor.h  encrypter.h  encrypter.hpp  encryptionparams.h  encryptionparams.hpp  encryptor.h  evaluator.h  evaluator.hpp  global.hpp  keygenerator.h  keygenerator.hpp  plaintext.h  plaintext.hpp  publickey.h  publickey.hpp  secretkey.h  secretkey.hpp
include/cgsw/utils/: gadget_matrix.h  gadget_matrix.hpp  matrix.h  matrix.hpp  numth.h  numth.hpp  utils.h  utils.hpp
pir/: CMakeLists.txt  README.md
pir/client/: app.cpp  client.cpp  client.hpp
pir/examples/: 1_simplest_int.cpp  2_simplest_str.cpp  3_compressed_query.cpp  examples.cpp  examples.hpp
pir/server/: dbms.cpp  server.cpp  server.hpp
pir/server/data/: country.csv  simplest_int.csv  simplest_str.csv
src/: CMakeLists.txt
src/cgsw/: cgsw.h  ciphertext.cpp  ciphertext.h  common.h  context.cpp  context.h  decrypter.cpp  decryptor.cpp  decryptor.h  encrypter.cpp  encryptionparams.cpp  encryptionparams.h  encryptor.cpp  encryptor.h  evaluator.cpp  evaluator.h  keygenerator.cpp  keygenerator.h  matrix.cpp  matrix.h  modulus.cpp  modulus.h  plaintext.cpp  plaintext.h  publickey.h
src/cgsw/utils/: eigenmvn.h  gadget_matrix.cpp  matrix.cpp  matrix.h  matrixgenerator.cpp  matrixgenerator.h  numth.cpp  numth.h  utils.cpp  utils.h
tests/: CMakeLists.txt  common.cpp  encryptionparams.cpp  encryptor.cpp  end2end.cpp  evaluator.cpp  keygenerator.cpp  plaintext.cpp  utils.cpp
tests/BDT/: encryptdecrypt.cpp
tests/BDT/CGSW1/: addition.cpp  encryptdecrypt.cpp  multiplication.cpp  operation.cpp
tests/BDT/CGSW2/: encryptdecrypt.cpp
tests/BDT/GSW/: encryptdecrypt.cpp  operation.cpp
tests/microtestbench/: cgsw.cpp  gsw.cpp
tests/testbench/: cgsw.cpp  gsw.cpp
tests/utils/: gadget_matrix.cpp  utils.cpp
utils/: CMakeLists.txt  gen_params_table.cpp  params.cpp  test_cgsw_multiplicative_depth.cpp
